tests/machine/x/go/group_by_left_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_left_join.go:16:17: undefined: Customer
../../../tests/machine/x/go/group_by_left_join.go:19:5: undefined: Customer
../../../tests/machine/x/go/group_by_left_join.go:22:5: undefined: Customer
../../../tests/machine/x/go/group_by_left_join.go:26:14: undefined: Order
../../../tests/machine/x/go/group_by_left_join.go:29:5: undefined: Order
../../../tests/machine/x/go/group_by_left_join.go:32:5: undefined: Order
../../../tests/machine/x/go/group_by_left_join.go:36:20: undefined: Stat
../../../tests/machine/x/go/group_by_left_join.go:64:11: undefined: Order
../../../tests/machine/x/go/group_by_left_join.go:87:16: undefined: Stat
../../../tests/machine/x/go/group_by_left_join.go:89:30: undefined: Stat
../../../tests/machine/x/go/group_by_left_join.go:89:30: too many errors

1: //go:build ignore
